...
        }}
      />
      <Tabs.Screen
        name="progress"
        options={{
          tabBarAccessibilityLabel: "Progress",
          tabBarButtonTestID: "tab-progress",
          title: "Progress",
        }}
      />
      <Tabs.Screen
        name="cash"
        options={{
...
